tests/NormalTests/paczka2/big_fuzzy/95741051.err
Error in line 12: c7r S364 51,2
Error in line 24: wyMoDrnq A258 51,5
Error in line 17: 3vtc3s4TwA A932 1,2
Error in line 54: wyMoDrnq A932 96,2
Error in line 64: PexxbKG6 A932 63,8
Error in line 74: 3vtc3s4TwA S232 20,2
Error in line 85: 6mvX8KrEKR S232 51,29
Error in line 87: 78zu Í258 25,4
Error in line 91: 6mvX8KrEKR A932 29,1
Error in line 106: A932 A258 31,7
Error in line 93: 3vtc3s4TwA S232 82,4
Error in line 101: c7r A258 6,9
Error in line 110: 3vtc3s#TwA A932 #5,3
Error in line 127: 3vtc3s4TwA A932 46,8
Error in line 139: c7r A932 -2,9
Error in line 128: 78zu A258 60,4
Error in line 133: 3vtc3s4TwA A258 98,8
Error in line 155: PexxbKG6 S232 68,4
Error in line 157: PexxbKG6 A932 38,5
Error in line 160: PexxbKG6 S364 43,4
Error in line 162: PexxbKG6 A258 564,1
Error in line 163: PexxbKG6 S364 87,1
Error in line 156: 78zu S232 95,0
Error in line 181: 78zu A932 84,0
Error in line 178: 3vtc3s4TwA S364 322,4
Error in line 187: 3vtc3s4TwA A258 88,9
Error in line 189: 3vtc3s4TwA S232 67,5
Error in line 190: 3vtc3s4TwA A932 23,2
Error in line 184: A932 A932 50,0
Error in line 195: A932 S232 -3,5
Error in line 201: wyMoDrnq S232 31,E
Error in line 211: 3vtc3s4TwA S364 87,4
Error in line 205: wyMoDrnq S232 69,3
Error in line 212: c7r S232 77,1
Error in line 213: 3vtc3s4TwA S232 86,1
Error in line 220: 78zu A932 25,4
Error in line 228: c7r A258 230,2
Error in line 233: c7r A932 68,2
Error in line 230: 78zu A258 47,5
Error in line 247: 78zu A932 205,6
